Removing everything that didn't solve the issue and simplifying